# chanlun-pro

./: .gitattributes  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README_PRO.md  ai_prompt_example.md  all_top_codes.txt  check_env.py  get_hdinfo.bat  get_qmt_option_data.py  install_windows.bat  pyproject.toml  qmt_data_test.py  requirements.txt  setup.py  update.md  windows_get_hdinfo.bat  windows_install.bat  windows_run.bat  同步行情到数据库.ipynb  数字货币策略回测.ipynb  数字货币缠论图表.ipynb  缠论实现问题分析与修复报告.md  缠论实现问题分析与修复报告_完成版.md  股票策略回测.ipynb  股票缠论图表.ipynb
cl_v2/: back_klines.py  cl.py  config.py.demo  databases.sql  exchange.py  exchange_binance.py  exchange_db.py  exchange_futu.py  fun.py  kcharts.py  rd.py  stock_dl_rank.py  strategy.py  trader.py
cookbook/: mkdocs.yml  requirements.txt
docker/: .condarc  Dockerfile  condainit  mysql.sql  mysql_secure.sh  pm2.config.js  sources.list  ssh_keygen.sh  start.sh
example/: 使用示例.ipynb
joinquant/: A股动量排行选股择时.ipynb  README.md  cl.py  fun.py  数据下载.ipynb
notebook/: VNPY_期货回测.ipynb  回测_数字货币策略.ipynb  回测_沪深股票策略.ipynb  回测_缠论参数优化.ipynb  回测数据查看.ipynb  图表_股票缠论图表.ipynb  图表（递归）_缠论图表.ipynb  导入聚宽数据.ipynb  数据回放测试.ipynb  画图修复.ipynb
package/: TA_Lib-0.4.28-cp310-cp310-win_amd64.whl  TA_Lib-0.4.32-cp312-cp312-win_amd64.whl  TA_Lib-0.4.32-cp313-cp313-win_amd64.whl  ta_lib-0.4.25-cp311-cp311-win_amd64.whl  ta_lib-0.6.8-cp311-cp311-macosx_13_0_x86_64.whl  ta_lib-0.6.8-cp311-cp311-macosx_14_0_arm64.whl  ta_lib-0.6.8-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  ta_lib-0.6.8-cp311-cp311-win_amd64.whl  (+3 more)
(+6339 files in other folders)
